# sublime-mcp

./: .gitattributes  .gitignore  .npmignore  AGENT_GUIDE.md  CLAUDE.md  Default.sublime-commands  LICENSE  MCP Commander.sublime-commands  MCP Speedup Response.md  README.md  agents.md  ai_charges.json  claude-guide.md  debugger_mcp_tools.py  index.js  lsp_mcp_tools.py  mcp_server.py  messages.json  package.json  pyproject.toml  server.json  sonnet.txt  sublime_claude_mcp_brief.md  sublime_mcp.py  sublime_mcp_browse.py  temp.txt
.claude-flow/swarm/: swarm-state.json
.claude-flow/tasks/: store.json
.swarm/: state.json
docs/: AGENT_GUIDE.md  agents.md  visible_terminal_skill.md
docs/superpowers/plans/: 2026-06-15-package-control-ready.md  2026-06-16-package-mcp-generation.md
docs/superpowers/specs/: 2026-06-15-package-control-ready-design.md  2026-06-16-package-mcp-generation-design.md
messages/: 1.3.0.txt  install.txt
sublime_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: conftest.py  test_http_api.py  test_index_param.md  test_mcp_sse.py  test_package_mcp.py
