[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sublime-mcp"
version = "1.2.5"
description = "MCP server for Sublime Text 4 — lets Claude Code read and control a running ST instance"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["mcp", "httpx"]
keywords = ["mcp", "sublime-text", "claude", "ai", "editor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Text Editors",
]

[[project.authors]]
name = "Donald Chitester"
email = "donaldchitester@gmail.com"

[project.urls]
Homepage = "https://github.com/dpc00/sublime-mcp"
Repository = "https://github.com/dpc00/sublime-mcp"

[project.scripts]
sublime-mcp = "mcp_server:main"

[tool.setuptools]
py-modules = ["mcp_server"]
